refactory: Atualizar dados do aluno
